--- a/each_menu.html
+++ b/each_menu.html
@@ -60,7 +60,8 @@
   <!---------------------------------------------->
   <!-- Your own JavaScript functions go here    -->
   <!---------------------------------------------->
-  <script src="scripts/firebaseAPI_TEAMDTC06.js"></script>
+  <script src="./scripts/firebaseAPI_TEAMDTC06.js"></script>
+  <script src="./scripts/general_skeleton.js"></script>
   <script src="scripts/each_menu.js"></script>
   <!-- <script src="./scripts/script.js"></script> -->
 
