--- a/navbars/general_nav_bottom.html
+++ b/navbars/general_nav_bottom.html
@@ -35,7 +35,7 @@
       </a>
     </li>
     <li class="flex-row">
-      <a>
+      <a href="add_exercise.html">
         <div class="inline-block">
           <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-plus inline-block" width="40"
             height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#2d58b1" fill="none" stroke-linecap="round"
