--- a/add_exercise.html
+++ b/add_exercise.html
@@ -346,11 +346,11 @@
   <!---------------------------------------------->
 
   <!-- Link to scripts of your own -->
-  <script src="../scripts/home_nav_top_hamburger.js"></script>
-  <script src="../scripts/general_nav_bottom.js"></script>
-  <script src="../scripts/general_skeleton.js"></script>
-  <script src="../scripts/firebaseAPI_TEAMDTC06.js"></script>
-  <script src="../scripts/add_exercise.js"></script>
+  <script src="./scripts/home_nav_top_hamburger.js"></script>
+  <script src="./scripts/general_nav_bottom.js"></script>
+  <script src="./scripts/general_skeleton.js"></script>
+  <script src="./scripts/firebaseAPI_TEAMDTC06.js"></script>
+  <script src="./scripts/add_exercise.js"></script>
 </body>
 
 </html>
