--- a/navbars/general_nav_top.html
+++ b/navbars/general_nav_top.html
@@ -34,12 +34,13 @@
             aria-current="page">Overview</a>
         </li>
         <li>
-          <a href="../exercise/exercise_log.html"
+          <a href="../exercise_log.html"
             class="block py-2 px-3 text-[#2d58b1] rounded-md focus:ring-1 hover:focus:ring-[#2d58b1]">Exercises</a>
         </li>
         <li>
-          <a href="#"
-            class="block py-2 px-3 text-[#2d58b1] rounded-md focus:ring-1 hover:focus:ring-[#2d58b1]">Settings</a>
+          <a href="../my_recipes.html"
+            class="block py-2 px-3 text-[#2d58b1] rounded-md focus:ring-1 hover:focus:ring-[#2d58b1]">Food
+            Library</a>
         </li>
         <li>
           <a href="#"
