--- a/each_recipe.html
+++ b/each_recipe.html
@@ -33,7 +33,7 @@
   <nav id="navbarPlaceholder"></nav>
 
   <!-- Main Content -->
-  <main class="pb-32 max-w-md mx-auto">
+  <main class="pb-24 pt-20 max-w-md mx-auto">
     <h1 class="font-bold text-5xl m-4 mb-0"><span id="recipeName"></span></h1>
     <!-- Graph area -->
     <div class="w-full p-4">
