--- a/add_exercise.html
+++ b/add_exercise.html
@@ -28,61 +28,9 @@
 
 </head>
 
-<body>
+<body class="max-w-screen">
   <!-- Top Navbar -->
-  <nav id="home_nav_top" class="bg-[#2d58b1] rounded-b-xl sticky top-0">
-    <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-2">
-
-      <!-- Back -->
-      <button class="inline-flex items-center justify-center p-2 w-10 h-10 text-sm text-white hover:text-yellow-100">
-        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-arrow-left" width="40" height="40"
-          viewBox="0 0 24 24" stroke-width="1.5" stroke="#fff9e1" fill="none" stroke-linecap="round"
-          stroke-linejoin="round">
-          <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-          <path d="M5 12l14 0" />
-          <path d="M5 12l6 6" />
-          <path d="M5 12l6 -6" />
-        </svg>
-      </button>
-
-      <!-- Logo -->
-      <a href="#" class="flex items-center justify-center mx-auto">
-        <img src="/images/FitQuest Logo.svg" class="h-8" alt="Logo" />
-        <span class="self-center text-2xl text-white font-semibold whitespace-nowrap">FitQuest</span>
-      </a>
-
-      <!-- Hamburger Menu -->
-      <button data-collapse-toggle="navbar-hamburger" type="button"
-        class="inline-flex items-center justify-center p-2 w-10 h-10 text-sm text-white rounded-lg hover:bg-white hover:text-[#2d58b1] focus:outline-none"
-        aria-controls="navbar-hamburger" aria-expanded="false">
-        <span class="sr-only">Open main menu</span>
-        <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
-          <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-            d="M1 1h15M1 7h15M1 13h15" />
-        </svg>
-      </button>
-      <div class="hidden w-full" id="navbar-hamburger">
-        <ul class="flex flex-col font-medium mt-4 rounded-lg bg-white">
-          <li>
-            <a href="#" class="block py-2 px-3 text-[#2d58b1] rounded-md focus:ring-1 hover:focus:ring-[#2d58b1]"
-              aria-current="page">Home</a>
-          </li>
-          <li>
-            <a href="#"
-              class="block py-2 px-3 text-[#2d58b1] rounded-md focus:ring-1 hover:focus:ring-[#2d58b1]">History</a>
-          </li>
-          <li>
-            <a href="#"
-              class="block py-2 px-3 text-[#2d58b1] rounded-md focus:ring-1 hover:focus:ring-[#2d58b1]">Settings</a>
-          </li>
-          <li>
-            <a href="#"
-              class="block py-2 px-3 text-[#2d58b1] rounded-md focus:ring-1 hover:focus:ring-[#2d58b1]">Support</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
+  <nav id="navbarPlaceholder"></nav>
 
   <!-- Main Session -->
   <main class="bg-white shadow-2xl mx-auto max-w-full md:max-w-[75%] my-10 rounded-2xl">
@@ -271,6 +219,15 @@
           </div>
         </div>
 
+        <!-- Heart Rate -->
+        <div class="mb-6">
+          <label class="block text-grey-darker text-lg font-bold mb-2" for="heart_rate">Enter your Heart-rate
+            (BPM)</label>
+          <input class="shadow appearance-none border rounded w-full py-2 px-3 text-grey-darker" id="heart_rate"
+            type="number" placeholder="Heart rate (bpm)" required>
+        </div>
+
+
         <!-- Save and Cancel Buttons -->
         <div class="flex items-center justify-between">
           <button id="cancel" type="reset"
@@ -289,65 +246,12 @@
 
 
   <!-- Bottom Navbar -->
-  <nav class="fixed inset-x-0 bottom-0 bg-[#2d58b1] text-[#fffff] rounded-t-xl">
-    <div class="flex justify-between items-center px-4 py-2">
-      <!-- Home Icon -->
-      <button id="home-btn" class="p-2" aria-label="Home">
-        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-home" width="24" height="24"
-          viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round"
-          stroke-linejoin="round">
-          <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-          <path d="M5 12l-2 0l9 -9l9 9l-2 0" />
-          <path d="M5 12v7a2 2 0 0 0 2 2h10a2 2 0 0 0 2 -2v-7" />
-          <path d="M9 21v-6a2 2 0 0 1 2 -2h2a2 2 0 0 1 2 2v6" />
-        </svg>
-      </button>
-
-      <!-- Plus Icon -->
-      <button id="plus-btn" class="p-2" aria-label="Add">
-        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-circle-plus" width="24" height="24"
-          viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round"
-          stroke-linejoin="round">
-          <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-          <path d="M3 12a9 9 0 1 0 18 0a9 9 0 0 0 -18 0" />
-          <path d="M9 12h6" />
-          <path d="M12 9v6" />
-        </svg>
-      </button>
-
-      <!-- Settings Icon -->
-      <button id="settings-btn" class="p-2" aria-label="Settings">
-        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-settings" width="24" height="24"
-          viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round"
-          stroke-linejoin="round">
-          <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-          <path
-            d="M10.325 4.317c.426 -1.756 2.924 -1.756 3.35 0a1.724 1.724 0 0 0 2.573 1.066c1.543 -.94 3.31 .826 2.37 2.37a1.724 1.724 0 0 0 1.065 2.572c1.756 .426 1.756 2.924 0 3.35a1.724 1.724 0 0 0 -1.066 2.573c.94 1.543 -.826 3.31 -2.37 2.37a1.724 1.724 0 0 0 -2.572 1.065c-.426 1.756 -2.924 1.756 -3.35 0a1.724 1.724 0 0 0 -2.573 -1.066c-1.543 .94 -3.31 -.826 -2.37 -2.37a1.724 1.724 0 0 0 -1.065 -2.572c-1.756 -.426 -1.756 -2.924 0 -3.35a1.724 1.724 0 0 0 1.066 -2.573c-.94 -1.543 .826 -3.31 2.37 -2.37c1 .608 2.296 .07 2.572 -1.065z" />
-          <path d="M9 12a3 3 0 1 0 6 0a3 3 0 0 0 -6 0" />
-        </svg>
-      </button>
-
-      <!-- User Icon -->
-      <button id="user-btn" class="p-2" aria-label="User">
-        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-user-square-rounded" width="24"
-          height="24" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round"
-          stroke-linejoin="round">
-          <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-          <path d="M12 13a3 3 0 1 0 0 -6a3 3 0 0 0 0 6z" />
-          <path d="M12 3c7.2 0 9 1.8 9 9s-1.8 9 -9 9s-9 -1.8 -9 -9s1.8 -9 9 -9z" />
-          <path d="M6 20.05v-.05a4 4 0 0 1 4 -4h4a4 4 0 0 1 4 4v.05" />
-        </svg>
-      </button>
-    </div>
-  </nav>
-
+  <nav id="footerPlaceholder"></nav>
   <!---------------------------------------------->
   <!-- Your own JavaScript functions go here    -->
   <!---------------------------------------------->
 
   <!-- Link to scripts of your own -->
-  <script src="./scripts/home_nav_top_hamburger.js"></script>
-  <script src="./scripts/general_nav_bottom.js"></script>
   <script src="./scripts/general_skeleton.js"></script>
   <script src="./scripts/firebaseAPI_TEAMDTC06.js"></script>
   <script src="./scripts/add_exercise.js"></script>
