--- a/exercise_log.html
+++ b/exercise_log.html
@@ -47,7 +47,7 @@
     <nav id="navbarPlaceholder"></nav>
 
     <!-- Card Container -->
-    <div class="flex flex-col container justify-center items-center mx-auto gap-4 px-4 md:max-w-[75%]"
+    <div class="flex flex-col container justify-center items-center mx-auto gap-4 px-4 py-24 md:max-w-[75%]"
       id="exercise-card-container">
     </div>
 
