Fix the navigation between pages

--- a/navbars/home_nav_bottom.html
+++ b/navbars/home_nav_bottom.html
@@ -1,5 +1,5 @@
 <!-- Menu Background -->
-<div id="menuBackground" class="hidden fixed inset-0 bg-gray-600 bg-opacity-50 overflow-y-auto h-full w-full"></div>
+<div id="menuBackground" class="hidden fixed inset-0 bg-gray-600 bg-opacity-50 overflow-y-auto h-full w-screen"></div>
 
 <!-- Menu -->
 <div id="menu"
@@ -55,7 +55,7 @@
 </div>
 
 <!-- Bottom Navigation Bar -->
-<footer id="general-bottom-nav" class="sticky bottom-0 inset-x-0 max-w-[375px] bg-[#2d58b1] text-white rounded-t-xl">
+<footer id="general-bottom-nav" class="fixed bottom-0 inset-x-0 max-w-[375px] bg-[#2d58b1] text-white rounded-t-xl">
   <div class="flex justify-between items-center px-4 py-2">
     <!-- Settings Icon -->
     <button id="settings-btn" class="p-2" aria-label="Settings">
