Make Ingredients appear and append properly

--- a/ingredients.html
+++ b/ingredients.html
@@ -27,14 +27,11 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
     <!-- <link rel="stylesheet" href="./styles/style.css"> -->
-
-    <script src="../scripts/general_nav_bottom.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
     <script src="/scripts/firebaseAPI_TEAMDTC06.js"></script>
-    <script src="scripts/each_category.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 
@@ -88,8 +85,10 @@
 
     <!-- our own footer goes here-->
     <nav id="footerPlaceholder"></nav>
+    <script src="/scripts/firebaseAPI_TEAMDTC06.js"></script>
+    <script src="../scripts/general_nav_bottom.js"></script>
     <script src="./scripts/general_skeleton.js"></script>
-    <script src="./scripts/each_category.js"></script>
+    <script src="./scripts/ingredients.js"></script>
 </body>
 
 </html>
