Start add ingredient html page

--- a/ingredients.html
+++ b/ingredients.html
@@ -73,7 +73,7 @@
         <!-- create your own ingredient-->
         <div id="ingredientsContainer">
             <!-- Create Your own -->
-            <div id='create-ingrdient'
+            <div id='create-ingredient'
                 class="flex flex-col mx-auto h-24 justify-center items-center border-2 border-gray-300 shadow-md rounded-full my-4">
                 <div class="text-center">
                     <p class="text-xl font-semibold">Add another Ingredient.</p>
