--- a/overview_NEW.html
+++ b/overview_NEW.html
@@ -48,7 +48,7 @@
     <!-- the body of your page goes here -->
     <!-- stuff -->
     <div class="py-24 chart-container">
-        <canvas id="activityChart"></canvas>
+        <canvas id="dailyCalorieBurntChart"></canvas>
     </div>
 
     <!-- our own footer goes here-->
