--- a/exercise_log.html
+++ b/exercise_log.html
@@ -28,40 +28,25 @@
 
 </head>
 
-<body>
-  <!DOCTYPE html>
-  <html lang="en">
+<body class="space-y-16">
+  <!-- Top Navbar -->
+  <nav id="navbarPlaceholder"></nav>
+  <!-- Card Container -->
+  <div class="flex flex-col container justify-center items-center mx-auto gap-4 px-4 py-4 md:max-w-[75%]"
+    id="exercise-card-container">
+  </div>
 
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Add New Activity</title>
+  <!-- Bottom Navbar -->
+  <nav id="footerPlaceholder"></nav>
 
-    <!-- Tailwind Library CSS CDN go here -->
-    <script src="https://cdn.tailwindcss.com"></script>
-  </head>
+  <!---------------------------------------------->
+  <!-- Your own JavaScript functions go here    -->
+  <!---------------------------------------------->
 
-  <body>
-    <!-- Top Navbar -->
-    <nav id="navbarPlaceholder"></nav>
+  <!-- Link to scripts of your own -->
+  <script src="./scripts/firebaseAPI_TEAMDTC06.js"></script>
+  <script src="./scripts/general_skeleton_exercise.js"></script>
+  <script src="./scripts/exercise_log.js"></script>
+</body>
 
-    <!-- Card Container -->
-    <div class="flex flex-col container justify-center items-center mx-auto gap-4 px-4 py-24 md:max-w-[75%]"
-      id="exercise-card-container">
-    </div>
-
-    <!-- Bottom Navbar -->
-    <nav id="footerPlaceholder"></nav>
-
-    <!---------------------------------------------->
-    <!-- Your own JavaScript functions go here    -->
-    <!---------------------------------------------->
-
-    <!-- Link to scripts of your own -->
-    <script src="./scripts/firebaseAPI_TEAMDTC06.js"></script>
-    <script src="./scripts/general_skeleton_exercise.js"></script>
-    <script src="./scripts/exercise_log.js"></script>
-  </body>
-
-  </html>
+</html>
