--- a/profile.html
+++ b/profile.html
@@ -33,7 +33,7 @@
 
 </head>
 
-<body class="flex flex-col">
+<body class="flex flex-col space-y-16">
     <!------------------------------>
     <!-- Your HTML Layout go here -->
     <!------------------------------>
@@ -42,9 +42,10 @@
     <nav id="navbarPlaceholder"></nav>
 
     <!-- user info form -->
-    <main>
-        <form id="user-profile-form"
-            class="flex flex-col justify-center mx-auto container w-[75%] md:w-[50%] md:mx-auto max-h-fit bg-white border-1 border-gray-500 rounded-2xl shadow-2xl my-10 p-5 mb-10">
+    <main
+        class="flex flex-col justify-center mx-auto container w-[75%] md:w-[50%] md:mx-auto max-h-fit bg-white border-1 border-gray-500 rounded-2xl shadow-2xl my-10 p-5 mb-10">
+
+        <form id="user-profile-form">
             <h1 class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl">
                 <p class="text-center">Welcome! <span id="name"></span></p>
             </h1>
@@ -92,9 +93,8 @@
                     </div>
                 </div>
             </fieldset>
+            <!-- Save and Edit Buttons -->
         </form>
-        </div>
-        <!-- Save and Edit Buttons -->
         <div class="flex items-center justify-between">
             <button id="edit"
                 class=" max-w-fit bg-transparent hover:bg-blue-500 text-[#2d58b1] text-sm font-semibold hover:text-white py-2 px-4 border border-[#2d58b1] hover:border-transparent rounded"
@@ -107,7 +107,6 @@
                 Save
             </button>
         </div>
-        </form>
     </main>
 
     <nav id="footerPlaceholder"></nav>
