--- a/navbars/general_nav_top.html
+++ b/navbars/general_nav_top.html
@@ -1,4 +1,4 @@
-<nav id="general-top-nav" class="fixed top-0 inset-x-0 bg-[#2d58b1] rounded-b-xl ">
+<nav id="general-top-nav" class="fixed top-0 inset-x-0 bg-[#2d58b1] rounded-b-xl z-30">
   <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-2">
 
     <button id="back-btn"
