left align the gender box

--- a/profile.html
+++ b/profile.html
@@ -82,7 +82,7 @@
                 </div>
                 <!-- Gender drop-down -->
                 <div class="mb-6">
-                    <div class="max-w-sm mx-auto">
+                    <div class="max-w-sm">
                         <label for="gender" class="block mb-2 text-sm font-medium text-gray-900">Gender</label>
                         <select id="gender"
                             class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
