Fix the issue nav bars hiding the contents

--- a/ingredients.html
+++ b/ingredients.html
@@ -35,7 +35,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 
-<body>
+<body class="space-y-16">
     <!-- our own navbar goes here -->
     <nav id="navbarPlaceholder"></nav>
 
@@ -96,8 +96,7 @@
                 <!-- Modal Body -->
                 <div class="modal-body">
                     <form id="newIngredientForm">
-                        <input type="text" id="ingredientName" placeholder="Enter here" required
-                            class="input mb-2" />
+                        <input type="text" id="ingredientName" placeholder="Enter here" required class="input mb-2" />
                         <button type="button" onclick="submitIngredientName()" class="btn">Proceed</button>
                     </form>
                 </div>
@@ -112,4 +111,5 @@
     <script src="./scripts/general_skeleton.js"></script>
     <script src="./scripts/ingredients.js"></script>
 </body>
+
 </html>
