--- a/my_recipes.html
+++ b/my_recipes.html
@@ -17,15 +17,12 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
 </head>
 
-<body class="flex flex-col">
+<body class="flex flex-col space-y-16">
     <!-- top nav bar -->
     <nav id="navbarPlaceholder"></nav>
 
     <!-- have to link the firebase database to this and then make the graphs work with them. -->
     <main class="overflow-auto" style="height: calc(100vh - 112px);">
-+
-
-
         <!-- avatar -->
         <div
             class="relative mt-6 mx-auto overflow-hidden bg-gray-100 rounded-full dark:bg-gray-600 size-24 flex items-center justify-center">
