--- a/template.html
+++ b/template.html
@@ -40,7 +40,7 @@
 
 </head>
 
-<body>
+<body class="space-y-16">
     <!------------------------------>
     <!-- Your HTML Layout go here -->
     <!------------------------------>
