Fix issue nav bars hiding the content

--- a/add_exercise.html
+++ b/add_exercise.html
@@ -28,7 +28,7 @@
 
 </head>
 
-<body class="max-w-screen">
+<body class="max-w-screen space-y-16">
   <!-- Top Navbar -->
   <nav id="navbarPlaceholder"></nav>
 
