--- a/each_recipe.html
+++ b/each_recipe.html
@@ -28,7 +28,7 @@
 
 </head>
 
-<body class="overflow-auto" style="height: calc(100vh - 112px);">
+<body class="space-y-16">
   <!-- Top Nav bar -->
   <nav id="navbarPlaceholder"></nav>
 
