--- a/overview_NEW.html
+++ b/overview_NEW.html
@@ -37,7 +37,7 @@
 
 </head>
 
-<body>
+<body class="space-y-16">
     <!------------------------------>
     <!-- Your HTML Layout go here -->
     <!------------------------------>
