Fix the top navbar misplacing issue

--- a/overview_NEW.html
+++ b/overview_NEW.html
@@ -47,7 +47,7 @@
 
     <!-- the body of your page goes here -->
     <!-- stuff -->
-    <div class="py-24 chart-container">
+    <div class="chart-container">
         <canvas id="dailyCalorieBurntChart"></canvas>
     </div>
 
