--- a/navbars/home_nav_top.html
+++ b/navbars/home_nav_top.html
@@ -1,4 +1,4 @@
-<nav id="general-top-nav" class="fixed inset-x-0 bg-[#2d58b1] rounded-b-xl z-30">
+<nav id="general-top-nav" class="fixed top-0 inset-x-0 bg-[#2d58b1] rounded-b-xl z-30">
   <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-2">
     <a href="#" class="flex items-center justify-center mx-auto">
       <img src="/images/FitQuest Logo.svg" class="h-8" alt="Logo" />
