Add logout button to the navbars

--- a/each_category.html
+++ b/each_category.html
@@ -99,6 +99,7 @@
     <script src="./scripts/firebaseAPI_TEAMDTC06.js"></script>
     <script src="./scripts/general_skeleton.js"></script>
     <script src="./scripts/each_category.js"></script>
+    <script src="./scripts/searchbar.js"></script>
 </body>
 
 </html>
