--- a/navbars/home_nav_top.html
+++ b/navbars/home_nav_top.html
@@ -28,10 +28,15 @@
           <a href="../my_recipes.html"
             class="block py-2 px-3 text-[#2d58b1] rounded-md focus:ring-1 hover:focus:ring-[#2d58b1]">Food Library</a>
         </li>
-        <!-- <li>
-          <a href="#"
+        <li>
+          <a href="../login.html"
+            class="block py-2 px-3 text-red-700 rounded-md focus:ring-1 hover:focus:ring-[#2d58b1]">Logout</a>
+        </li>
+        <li>
+        <li>
+          <a href="../support.html"
             class="block py-2 px-3 text-[#2d58b1] rounded-md focus:ring-1 hover:focus:ring-[#2d58b1]">Support</a>
-        </li> -->
+        </li>
       </ul>
     </div>
   </div>
